; ModuleID = '/home/carl/AnghaBench/linux/security/integrity/ima/extr_ima_template.c_ima_template_has_modsig.c'
source_filename = "/home/carl/AnghaBench/linux/security/integrity/ima/extr_ima_template.c_ima_template_has_modsig.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ima_template_desc = type { i32, %struct.TYPE_2__** }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [7 x i8] c"modsig\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"d-modsig\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ima_template_has_modsig(%struct.ima_template_desc* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.ima_template_desc*, align 8
  %4 = alloca i32, align 4
  store %struct.ima_template_desc* %0, %struct.ima_template_desc** %3, align 8
  store i32 0, i32* %4, align 4
  br label %5

5:                                                ; preds = %37, %1
  %6 = load i32, i32* %4, align 4
  %7 = load %struct.ima_template_desc*, %struct.ima_template_desc** %3, align 8
  %8 = getelementptr inbounds %struct.ima_template_desc, %struct.ima_template_desc* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 8
  %10 = icmp slt i32 %6, %9
  br i1 %10, label %11, label %40

11:                                               ; preds = %5
  %12 = load %struct.ima_template_desc*, %struct.ima_template_desc** %3, align 8
  %13 = getelementptr inbounds %struct.ima_template_desc, %struct.ima_template_desc* %12, i32 0, i32 1
  %14 = load %struct.TYPE_2__**, %struct.TYPE_2__*** %13, align 8
  %15 = load i32, i32* %4, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds %struct.TYPE_2__*, %struct.TYPE_2__** %14, i64 %16
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @strcmp(i32 %20, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %35

23:                                               ; preds = %11
  %24 = load %struct.ima_template_desc*, %struct.ima_template_desc** %3, align 8
  %25 = getelementptr inbounds %struct.ima_template_desc, %struct.ima_template_desc* %24, i32 0, i32 1
  %26 = load %struct.TYPE_2__**, %struct.TYPE_2__*** %25, align 8
  %27 = load i32, i32* %4, align 4
  %28 = sext i32 %27 to i64
  %29 = getelementptr inbounds %struct.TYPE_2__*, %struct.TYPE_2__** %26, i64 %28
  %30 = load %struct.TYPE_2__*, %struct.TYPE_2__** %29, align 8
  %31 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = call i32 @strcmp(i32 %32, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0))
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %36, label %35

35:                                               ; preds = %23, %11
  store i32 1, i32* %2, align 4
  br label %41

36:                                               ; preds = %23
  br label %37

37:                                               ; preds = %36
  %38 = load i32, i32* %4, align 4
  %39 = add nsw i32 %38, 1
  store i32 %39, i32* %4, align 4
  br label %5

40:                                               ; preds = %5
  store i32 0, i32* %2, align 4
  br label %41

41:                                               ; preds = %40, %35
  %42 = load i32, i32* %2, align 4
  ret i32 %42
}

declare dso_local i32 @strcmp(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
